--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="Assets/css/style.css">
     <link rel="stylesheet" href="Assets/css/dashboard.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
 </head>
 <body class="container-fluid m-0 p-0">
 
 <canvas id="c"> </canvas>
 
-<button class="btn btn-light" style="position: fixed; top: 15px; left: 15px; right: 15; z-index: 1;" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">Learn About Me</button>
+<button class="btn btn-light" style="position: fixed; top: 15px; left: 15px; right: 15px; z-index: 1;" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">Learn About Me</button>
 <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
     <div class="offcanvas-header">
       <h5 id="offcanvasTopLabel">This is Me:</h5>
@@ -22,22 +21,11 @@
     <div class="offcanvas-body">
       ...
     </div>
-  </div>
+</div>
 
 
-  <!-- socials -->
-  <div class="btn-group" role="group" style="position: fixed; top: 15px; right: 15px; z-index: 1;" aria-label="Basic mixed styles example">
-    <button type="button" class="btn btn-success"><i class="bi bi-whatsapp text-light"></i></button>
-    <button type="button" class="btn btn-light"><i class="bi bi-github text-dark"></i></button>
-    <button type="button" class="btn btn-danger"><i class="bi bi-discord text-light"></i></button>
-    <button type="button" class="btn btn-light"><i class="bi bi-facebook text-dark"></i></button>
-  </div>
 
-
-  <!-- Close rain -->
-  <i class="bi bi-arrow-up" style="position: absolute; bottom: 15px; color: #fcfcfc; font-size: 30px; left: 15px; z-index: 1; cursor: pointer;"></i>
-
-  <!-- middle -->
+<!-- middle -->
 <div class="wrapper">
     <svg>
         <text x="50%" y="50%" dy=".35em" text-anchor="middle">
@@ -47,57 +35,72 @@
     <b style="color: #FFFFFF; font-family: monospace">Let's Talk AI, Apps and Websites!</b>
 </div>
 
+<style>
+    @import url("https://fonts.googleapis.com/css2?family=Russo+One&display=swap");
 
+    svg {
+        font-family: "Russo One", sans-serif;
+        width: 100%; height: 100%;
+    }
+    svg text {
+        animation: stroke 5s infinite alternate;
+        stroke-width: 2;
+        stroke: #FFFFFF;
+        font-size: 100px;
+    }
+    @keyframes stroke {
+        0%   {
+            fill: rgba(246,213,58,0); stroke: rgba(255,255,255,1);
+            stroke-dashoffset: 25%; stroke-dasharray: 0 50%; stroke-width: 2;
+        }
+        70%  {fill: rgba(246,213,58,0); stroke: rgba(255,255,255,1); }
+        80%  {fill: rgba(246,213,58,0); stroke: rgba(255,255,255,1); stroke-width: 3; }
+        100% {
+            fill: rgb(34, 144, 0); stroke: rgba(255, 255, 255, 0.897);
+            stroke-dashoffset: -25%; stroke-dasharray: 50% 0; stroke-width: 0;
+        }
+    }
 
-    <style>
-        @import url("https://fonts.googleapis.com/css2?family=Russo+One&display=swap");
+    .wrapper {
+        background-color: #f8efef00;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        height: fit-content;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        overflow: hidden;
+        z-index: 1;
+    }
 
-svg {
-	font-family: "Russo One", sans-serif;
-	width: 100%; height: 100%;
-}
-svg text {
-	animation: stroke 5s infinite alternate;
-	stroke-width: 2;
-	stroke: #FFFFFF;
-	font-size: 100px;
-}
-@keyframes stroke {
-	0%   {
-		fill: rgba(246,213,58,0); stroke: rgba(255,255,255,1);
-		stroke-dashoffset: 25%; stroke-dasharray: 0 50%; stroke-width: 2;
-	}
-	70%  {fill: rgba(246,213,58,0); stroke: rgba(255,255,255,1); }
-	80%  {fill: rgba(246,213,58,0); stroke: rgba(255,255,255,1); stroke-width: 3; }
-	100% {
-		fill: rgb(34, 144, 0); stroke: rgba(255, 255, 255, 0.897);
-		stroke-dashoffset: -25%; stroke-dasharray: 50% 0; stroke-width: 0;
-	}
-}
+    @media (max-width: 768px) {
+        svg text {
+            font-size: 50px;
+        }
+        .wrapper b {
+            font-size: 16px;
+        }
+    }
 
-.wrapper {
-    background-color: #f8efef00;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: fit-content;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    overflow: hidden;
-    z-index: 1;
-};
+    @media (max-width: 480px) {
+        svg text {
+            font-size: 30px;
+        }
+        .wrapper b {
+            font-size: 12px;
+        }
+    }
+</style>
 
-    </style>
-       
+<elevenlabs-convai agent-id="rSKByQOvmqMierDSObKz"></elevenlabs-convai>
+<script src="https://elevenlabs.io/convai-widget/index.js" async type="text/javascript"></script>
 
-       <elevenlabs-convai agent-id="rSKByQOvmqMierDSObKz"></elevenlabs-convai><script src="https://elevenlabs.io/convai-widget/index.js" async type="text/javascript"></script>
-   
-       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="Assets/js/script.js"></script>
 <script src="Assets/js/dashboard.js"></script>
 </body>
